# banker

./: CMakeLists.txt  README.md  UNLICENCE  bugs  builders.bat  dev  header.txt  public  todo
design/: design_structure_networkingstuff.txt  nonce
design/server/: a
include/banker/: banker.hpp  debug_inspector.hpp
include/banker/common/containers/: variant_buffer.hpp
include/banker/common/debugging/: debugger.hpp
include/banker/common/formatting/: header.hpp  time.hpp
include/banker/common/hash/: robin_hash.hpp
include/banker/common/rng/: crypto_rng.hpp
include/banker/common/time/: timers.hpp
include/banker/core/crypto/: crypter.hpp  crypto_rng.hpp  format_bytes.hpp
include/banker/core/networker/: base_packet_types.hpp  client.hpp  networker.hpp  server.hpp
include/banker/core/networker/buildt_in/: base_packets.hpp
include/banker/core/networker/client_containers/: dense_storage.hpp  stable_storage.hpp
include/banker/core/networker/common/: crypto_stream.hpp  packet_serializer_net.hpp  stream_handler.hpp
include/banker/core/networker/core/: packet.hpp
include/banker/core/networker/core/packet/: packet.hpp
include/banker/core/networker/core/packet_streaming/: packet_stream.hpp  packet_stream_core.hpp  packet_stream_handler.hpp
include/banker/core/networker/core/server/: client_manager.hpp  server_core.hpp
include/banker/core/networker/core/socket/: error.hpp  polling.hpp  socket.hpp
include/banker/core/networker/core/stream_socket/: stream_socket.hpp  stream_socket_core.hpp  stream_transmit_buffer.hpp
include/banker/core/networker/core/tcp/: out_buffer.hpp  packet_stream.hpp  packet_stream_core.hpp  send_buffer.hpp  stream_core.hpp  stream_handler.hpp  stream_socket.hpp  tcp_operations.hpp
include/banker/core/networker/crypto/: crypto_channel_core.hpp  crypto_core.hpp
include/banker/core/networker/servers/: stream_server.hpp
include/banker/core/networker/tcp/: tcp_client.hpp  tcp_server.hpp
include/banker/crypto/: crypter.hpp  crypto_rng.hpp  format_bytes.hpp
include/banker/monocypher/: monocypher-ed25519.hpp
include/banker/networker/: client.hpp  networker.hpp  server.hpp  socket.hpp
include/banker/networker/build_in/: build_in_packets.hpp
include/banker/networker/buildt_in/: base_packets.hpp
include/banker/networker/common/: crypto_socket.hpp  crypto_stream.hpp  packet_handling.hpp  packet_serializer_net.hpp  stream_handler.hpp
include/banker/networker/core/: error.hpp  networker.hpp  packet.hpp  socket.hpp
include/banker/shared/: _  compat.hpp  program_macros.hpp
include/banker/tester/: tester.hpp
include/banker/tests/: client_manager_tests.hpp  encryption.hpp  encryption_tests.hpp  handshake_tests.hpp  packet_tests.hpp  robin_hash_tests.hpp  stream_network_tests.hpp
include/banker/tests/tester/: tester.hpp
old/packet_streaming/: packet_stream_core.hpp  packet_stream_handler.hpp
old/tcp/: out_buffer.hpp  stream_core.hpp
src/: http_server.hpp  main.cpp
src/banker/monocypher/: monocypher-ed25519.c  monocypher-ed25519.cpp  monocypher.c  monocypher.cpp
